--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,52 @@
+@font-face {
+  font-family: "Poppins-Medium";
+  src: url(../fonts/Poppins-Medium.ttf);
+}
+@font-face {
+  font-family: "Signika-VariableFont_wght";
+  src: url(../fonts/Signika-VariableFont_wght.ttf);
+}
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #111;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .container {
+  display: flex;
+  flex-direction: column;
+  height: 30em;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+}
+body .title {
+  margin: 0;
+  font-size: 34px;
+  font-family: "Signika-VariableFont_wght";
+  letter-spacing: 5px;
+}
+body input[type=date] {
+  outline: none;
+  cursor: pointer;
+  border-color: ffffff;
+  width: 20em;
+  text-align: center;
+  border-radius: 5px;
+}
+body .clock {
+  width: 20em;
+  display: flex;
+  justify-content: space-evenly;
+  font-family: "Poppins-Medium";
+  font-size: 24px;
+}
+body .clock > span {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
