--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,56 +2,62 @@
     font-family: 'Poppins-Medium';
     src: url(../fonts/Poppins-Medium.ttf);
 }
+
 @font-face {
     font-family: 'Signika-VariableFont_wght';
     src: url(../fonts/Signika-VariableFont_wght.ttf);
 }
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #111;
-    color: #ffffff;
+
+@mixin flex {
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
-    .container{
-        display: flex;
-        flex-direction: column;
+body {
+    @include flex;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #090909;
+    color: #ffffff;
+
+    .container {
         height: 30em;
+        @include flex;
+        flex-direction: column;
         justify-content: space-evenly;
-        align-items: center;
         text-align: center;
     }
 
     .title {
         margin: 0;
-        font-size: 34px;
+        font-size: 7vw;
         font-family: 'Signika-VariableFont_wght';
-        letter-spacing: 5px;
+        letter-spacing: 2px;
     }
 
     input[type=date] {
-        outline: none;
-        cursor: pointer;
-        border-color: ffffff;
-        width: 20em;
+        width: 45vw;
+        padding: 8px 16px;
         text-align: center;
+        outline: none;
         border-radius: 5px;
+        cursor: pointer;
+        background-color: #ffffff;
     }
 
     .clock {
-        width: 20em;
-        display: flex;
-        justify-content: space-evenly;
+        width: 100%;
+        @include flex;
+        justify-content: space-between;
         font-family: 'Poppins-Medium';
-        font-size: 24px;
+        font-size: 18px;
 
         >span {
-            display: flex;
+            @include flex;
             flex-direction: column;
-            align-items: center;
+            margin: 0 1px;
         }
     }
 }
