--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,10 @@
     align-items: center;
 }
 
+.hidden {
+    display: none;
+}
+
 body {
     @include flex;
     margin: 0;
@@ -32,13 +36,13 @@ body {
 
     .title {
         margin: 0;
-        font-size: 7vw;
+        font-size: 5vw;
         font-family: 'Signika-VariableFont_wght';
         letter-spacing: 2px;
     }
 
     input[type=date] {
-        width: 45vw;
+        width: 40vw;
         padding: 8px 16px;
         text-align: center;
         outline: none;
