--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ body .container {
 }
 body .title {
   margin: 0;
-  font-size: 5vw;
+  font-size: 6vw;
   font-family: "Signika-VariableFont_wght";
   letter-spacing: 2px;
 }
@@ -49,7 +49,7 @@ body .clock {
   display: flex;
   justify-content: center;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   font-family: "Poppins-Medium";
   font-size: 18px;
 }
@@ -58,5 +58,4 @@ body .clock > span {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 0 1px;
 }/*# sourceMappingURL=main.css.map */
